<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.main.ProvideAddressActivity">


    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/transparent_button"
        android:drawableLeft="@drawable/close_icon_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableStart="@drawable/close_icon_32" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/your_address"
        android:textColor="@color/textColorLight"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:text="@string/provide_us_your_home_and_work_address"
        android:textAlignment="center"
        android:textColor="@color/textColorLight"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/home_address"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/textColorLight"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/home_address_button"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="10dp" />


    <Button
        android:id="@+id/home_address_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="auto"
        android:background="@drawable/text_area_background"
        android:gravity="center"
        android:padding="5dp"
        android:hint="@string/enter_home_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/work_address"
        android:textColor="@color/textColorLight"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/home_address_button"
        app:layout_constraintTop_toBottomOf="@+id/home_address_button" />

    <Button
        android:id="@+id/work_address_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="auto"
        android:background="@drawable/text_area_background"
        android:gravity="center"
        android:hint="@string/enter_work_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <Button
        android:id="@+id/skip_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginVertical="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/circle"
        android:text="@string/skip"
        android:textColor="@color/textColorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_address_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="15dp" />


    <Button
        android:id="@+id/save_address_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginVertical="20dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/circle_green"
        android:text="@string/save"
        android:textColor="@color/textColorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/skip_button"
        android:layout_marginStart="15dp" />

    <ProgressBar
        android:id="@+id/loading_icon_address"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>