<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isError"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/login_background"
            android:tint="#6F000000"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="0dp" />

        <include
            android:visibility="@{isError ? View.VISIBLE : View.GONE, default= gone}"
            android:id="@+id/login_error_bar"
            layout="@layout/error_bar"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/uber_logo"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/email_login"
            app:layout_constraintStart_toStartOf="@+id/email_login"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/super_text"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:layout_marginTop="50dp"
            android:textColor="@color/textColor"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/montserrat"
            android:background="@drawable/text_area_background"
            android:hint="@string/enter_your_email"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/text_area_background"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

        <TextView
            android:id="@+id/reset_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/forgot_password"
            android:textColor="@color/textColorLight"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/password_login"
            app:layout_constraintTop_toBottomOf="@+id/password_login" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/circle"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="20dp"
            android:text="Login"
            android:textColor="@color/textColorLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_button" />

        <TextView
            android:id="@+id/move_to_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/textColorLight"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/don_t_have_an_account_create_one_for_free"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <ProgressBar
            android:id="@+id/loading_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>