<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isError"
            type="Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:context=".ui.auth.RegisterFragment">

            <include
                android:id="@+id/register_error_bar"
                layout="@layout/error_bar"
                android:visibility="@{isError ? View.VISIBLE : View.GONE, default= gone}"/>


            <Button
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/transparent_button"
                android:drawableLeft="@drawable/close_icon_32"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_error_bar" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="Register"
                android:textColor="@color/textColorLight"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/close_button" />

            <androidx.cardview.widget.CardView
                android:id="@+id/user_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <ImageView
                    android:id="@+id/avatar_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/default_user_icon"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/tap_to_choose_a_profile_photo"
                android:textColor="@color/textColorLight"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_avatar" />


            <EditText
                android:id="@+id/username_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/text_area_background"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />



            <EditText
                android:id="@+id/email_register"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_area_background"
                app:layout_constraintEnd_toEndOf="@+id/username_register"
                app:layout_constraintStart_toStartOf="@+id/username_register"
                android:gravity="center"
                android:hint="@string/enter_your_email"
                app:layout_constraintTop_toBottomOf="@+id/username_register" />

            <EditText
                android:id="@+id/password_register"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:background="@drawable/text_area_background"
                app:layout_constraintEnd_toEndOf="@+id/username_register"
                app:layout_constraintStart_toStartOf="@+id/username_register"
                android:gravity="center"
                android:hint="@string/enter_password"
                app:layout_constraintTop_toBottomOf="@+id/email_register" />

            <EditText
                android:id="@+id/confirm_password_register"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:background="@drawable/text_area_background"
                app:layout_constraintEnd_toEndOf="@+id/username_register"
                app:layout_constraintStart_toStartOf="@+id/username_register"
                android:gravity="center"
                android:hint="Confirm password"
                app:layout_constraintTop_toBottomOf="@+id/password_register" />



            <Button
                android:id="@+id/register_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/circle"
                android:text="Register"
                android:textColor="@color/textColorLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_register" />

            <ProgressBar
                android:id="@+id/loading_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>